# billing-data-pipeline

./: .env.example  .gitignore  README.md  architecture-simple.md  architecture.md  main.py  pyproject.toml  pytest.ini
.github/: .copilot-instructions.md
configs/: backfill.yaml
pipeline/: __init__.py  aggregate_assets.py  assets.py  ingest_assets.py  pipeline.py  s3_utils.py  utils.py
pipeline/assets/: __init__.py  aggregates.py  ingest.py  reports.py
tests/pipeline/: __init__.py  test_s3_utils.py
